<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        android:textStyle="bold"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_intent_service"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_intent_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_intentService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintBottom_toTopOf="@id/button_bind_bound_service"
        />

    <Button
        android:id="@+id/button_bind_bound_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_boundService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_intent_service"
        app:layout_constraintBottom_toTopOf="@id/button_use_bound_service"
        />

    <Button
        android:id="@+id/button_use_bound_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_boundService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_bind_bound_service"
        app:layout_constraintBottom_toTopOf="@id/button_unbind_bound_service"
        />

    <Button
        android:id="@+id/button_unbind_bound_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unbind_boundService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_use_bound_service"
        app:layout_constraintBottom_toBottomOf="@id/button_start_external_service"
        />

    <Button
        android:id="@+id/button_start_external_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_external_Service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_unbind_bound_service"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
